@@ -44,7 +44,7 @@ public class MultiValueQueryV3Processor implements HpdsV3Processor {
     public String[] getHeaderRow(Query query) {
         String[] header = new String[query.select().size() + 1];
         header[0] = PATIENT_ID_FIELD_NAME;
-        System.arraycopy(query.select().toArray(), 0, header, 1, query.select().size());
+        System.arraycopy(query.select().toArray(new String[0]), 0, header, 1, query.select().size());
         return header;
     }
 
@@ -52,27 +52,24 @@ public class MultiValueQueryV3Processor implements HpdsV3Processor {
     public void runQuery(Query query, AsyncResult result) {
         Set<Integer> idList = queryExecutor.getPatientSubsetForQuery(query);
         log.info("Processing " + idList.size() + " rows for result " + result.getId());
-        Lists.partition(new ArrayList<>(idList), idBatchSize).stream().forEach(patientIds -> {
-            Map<String, Map<Integer, List<String>>> pathToPatientToValueMap = buildResult(result, query, new TreeSet<>(patientIds));
-            List<List<List<String>>> fieldValuesPerPatient = patientIds.stream().map(patientId -> {
-                List<List<String>> objectStream = Arrays.stream(getHeaderRow(query)).map(field -> {
+        Lists.partition(new ArrayList<>(idList), idBatchSize).forEach(patientIds -> {
+            Map<String, Map<Integer, List<String>>> pathToPatientToValueMap = buildResult(query, new TreeSet<>(patientIds));
+            List<List<List<String>>> fieldValuesPerPatient =
+                patientIds.stream().map(patientId -> Arrays.stream(getHeaderRow(query)).map(field -> {
                     if (PATIENT_ID_FIELD_NAME.equals(field)) {
                         return List.of(patientId.toString());
                     } else {
                         return pathToPatientToValueMap.get(field).get(patientId);
                     }
-                }).collect(Collectors.toList());
-                return objectStream;
-            }).collect(Collectors.toList());
+                }).collect(Collectors.toList())).collect(Collectors.toList());
             result.appendMultiValueResults(fieldValuesPerPatient);
         });
         result.closeWriter();
     }
 
-    private Map<String, Map<Integer, List<String>>> buildResult(AsyncResult result, Query query, TreeSet<Integer> ids) {
+    private Map<String, Map<Integer, List<String>>> buildResult(Query query, TreeSet<Integer> ids) {
         ConcurrentHashMap<String, Map<Integer, List<String>>> pathToPatientToValueMap = new ConcurrentHashMap<>();
-        List<ColumnMeta> columns =
-            query.select().stream().map(queryExecutor.getDictionary()::get).filter(Objects::nonNull).collect(Collectors.toList());
+        List<ColumnMeta> columns = query.select().stream().map(queryExecutor.getDictionary()::get).filter(Objects::nonNull).toList();
         List<String> paths = columns.stream().map(ColumnMeta::getName).collect(Collectors.toList());
         int columnCount = paths.size() + 1;
 
@@ -103,7 +100,7 @@ public class MultiValueQueryV3Processor implements HpdsV3Processor {
                     if (key < patientId) {
                         idPointer++;
                     } else if (key == patientId) {
-                        String value = getResultField(cube, cubeValues, idPointer);
+                        String value = getResultField(cubeValues, idPointer);
                         patientIdToValueMap.computeIfAbsent(patientId, k -> new ArrayList<>()).add(value);
                         idPointer++;
                     } else {
@@ -115,7 +112,7 @@ public class MultiValueQueryV3Processor implements HpdsV3Processor {
         }).orElseGet(Map::of);
     }
 
-    private String getResultField(PhenoCube<?> cube, KeyAndValue<?>[] cubeValues, int idPointer) {
+    private String getResultField(KeyAndValue<?>[] cubeValues, int idPointer) {
         Comparable<?> value = cubeValues[idPointer].getValue();
         return value.toString();
     }
